# async-task-scheduler

./: .gitattributes  .gitignore  404.html  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  index.html  launch.bat  mkdocs.yml  setup.js  setup.ps1  setup.sh  sitemap.xml  vcpkg.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: deploy-docs.yml  packaging.yml
QUICKSTART/: index.html
agent-manual/: index.html
api/: index.html
api/html/: annotated.html  classes.html  classscheduler_1_1IMetricsCollector-members.html  classscheduler_1_1IMetricsCollector.html  classscheduler_1_1IMetricsCollector__inherit__graph.dot  classscheduler_1_1MetricsCollectorImpl-members.html  classscheduler_1_1MetricsCollectorImpl.html  classscheduler_1_1MetricsCollectorImpl__inherit__graph.dot  classscheduler_1_1Scheduler-members.html  classscheduler_1_1Scheduler.html  classscheduler_1_1Task-members.html  classscheduler_1_1Task.html  classscheduler_1_1WorkStealingDeque-members.html  classscheduler_1_1WorkStealingDeque.html  (+60 more)
architecture/: index.html
benchmarks/: scheduler_bench.cpp
copilot/: index.html
dashboard/: index.html
docs/: QUICKSTART.md  architecture.md  dashboard.md  index.md  integration-guide.md  packaging.md  setup-system.md  user-guide.md
integration-guide/: index.html
packaging/: index.html  package.sh
scripts/: generate_api.py
search/: search_index.json
setup-system/: index.html
src/: scheduler.cpp  worker.cpp
tests/: scheduler_test.cpp
ui/: README.md  package-lock.json  package.json  setup.js
user-guide/: index.html
(+115 files in other folders)
